// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrapperPage it renders 1`] = `
<WrapperPage>
  <p>
    Test page
  </p>
</WrapperPage>
`;

exports[`WrapperPage restrict width custom max width when restrictWidth is number 1`] = `
<WrapperPage
  restrictWidth={600}
>
  <p>
    Test page
  </p>
</WrapperPage>
`;

exports[`WrapperPage restrict width custom max width when restrictWidth is string 1`] = `
<WrapperPage
  restrictWidth="600px"
>
  <p>
    Test page
  </p>
</WrapperPage>
`;

exports[`WrapperPage restrict width default max width when restrictWidth is true 1`] = `
<WrapperPage
  restrictWidth={true}
>
  <p>
    Test page
  </p>
</WrapperPage>
`;
